[package]
name = "proxibly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
async-std = { version = "1.10.0", features = ["attributes"] }
config = "0.11.0"
driftwood = "0.0.6"
serde = { version = "1.0.130", features = ["derive"] }
surf = "2.3.2"
surf-middleware-cache = "0.2.2"
tide = "0.16.0"
